# validation.js
@@ -22,6 +22,28 @@ const saveBook = (req, res, next) => {
   });
 };
 
+const saveRenter = (req, res, next) => {
+  const validationReq = {
+      name: "required|string",
+      birthday: "required|string",
+      title: "required|string",
+      checkout: "required|string",
+  };
+
+  check(req.body, validationReq, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation Failed",
+        data: err,
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
   saveBook,
+  saveRenter
 };
